--- a/templates/default/list_zones.html
+++ b/templates/default/list_zones.html
@@ -5,143 +5,163 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}List zones{% endtrans %}</h5>
-<div class="pb-3 text-secondary">{% trans %}Total number of zones:{% endtrans %} {{ count_zones_all_letterstart }} / {{ count_zones_view }}</div>
-
-{% if count_zones_view > iface_rowamount %}
-<div>
-    {{ letters | raw}}
-</div>
-{% endif %}
-
-<form method="post" action="index.php?page=delete_domains">
-    <input type="hidden" name="_token" value="{{ csrf_token }}">
-    <table class="table table-striped table-hover table-sm">
-        {% if count_zones_view > iface_rowamount and count_zones_all_letterstart == "0" or count_zones_view == 0 %}
-        <tr><td>{% trans %}There are no zones to show in this listing.{% endtrans %}</td></tr>
-        {% else %}
-        <thead>
-        <tr>
-            <th>
-                <input type="checkbox" class="form-check-input" id="select_zones" onClick="toggleZoneCheckboxes()"/>
-            </th>
-            <th>
-                <a href="index.php?page=list_zones&zone_sort_by=name&zone_sort_by_direction={{ zone_sort_by == 'name' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
-                    {% trans %}Name{% endtrans %}
-                </a>
-                {{ zone_sort_by == 'name' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
-            </th>
-            <th>
-                <a href="index.php?page=list_zones&zone_sort_by=type&zone_sort_by_direction={{ zone_sort_by == 'type' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
-                    {% trans %}Type{% endtrans %}</a>
-                {{ zone_sort_by == 'type' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
-            </th>
-            <th>
-                <a href="index.php?page=list_zones&zone_sort_by=count_records&zone_sort_by_direction={{ zone_sort_by == 'count_records' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
-                    {% trans %}Records{% endtrans %}
-                </a>
-                {{ zone_sort_by == 'count_records' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
-            </th>
-            <th>
-                <a href="index.php?page=list_zones&zone_sort_by=owner&zone_sort_by_direction={{ zone_sort_by == 'owner' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
-                    {% trans %}Owner{% endtrans %}
-                </a>
-                {{ zone_sort_by == 'owner' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
-            </th>
-            <th>{% trans %}Full name{% endtrans %}</th>
-
-            {% if iface_zonelist_serial %}
-            <th>{% trans %}Serial{% endtrans %}</th>
+<div class="card shadow-sm mb-4">
+    <div class="card-header py-3 d-flex justify-content-between align-items-center">
+        <strong><i class="bi bi-diagram-3 me-2"></i>{% trans %}List zones{% endtrans %}</strong>
+        <div>
+            {% if perm_zone_master_add %}
+            <a href="index.php?page=add_zone_master" class="btn btn-primary btn-sm">
+                <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add master zone{% endtrans %}
+            </a>
             {% endif %}
-
-            {% if iface_zonelist_template %}
-            <th>{% trans %}Template{% endtrans %}</th>
+            {% if perm_zone_slave_add %}
+            <a href="index.php?page=add_zone_slave" class="btn btn-secondary btn-sm">
+                <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add slave zone{% endtrans %}
+            </a>
             {% endif %}
-
-            {% if pdnssec_use %}
-            <th>{% trans %}DNSSEC{% endtrans %}</th>
-            {% endif %}
-            <th>&nbsp;</th>
-        </tr>
-        </thead>
-        {% endif %}
-
-        <tbody>
-        {% for zone in zones %}
-
-        {% if session_userlogin in zone['users'] %}
-        {% set user_is_zone_owner = true %}
-        {% else %}
-        {% set user_is_zone_owner = false %}
-        {% endif %}
-
-        <tr>
-            <td>
-                {% if count_zones_edit > 0 and (perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner)) %}
-                <input class="form-check-input" type="checkbox" name="zone_id[]" value="{{ zone['id'] }}">
-                {% endif %}
-            </td>
-            <td><span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ zone['comment'] }}">
-                {{ zone["utf8_name"] }}
-                </span></td>
-            <td>{{ zone["type"] | lower }}</td>
-            <td>{{ zone["count_records"] }}</td>
-
-            <td>
-                {% for owner in zone['owners'] %}
-                {{ owner }}<br>
-                {% endfor %}
-            </td>
-            <td>
-                {% for full_name in zone['full_names'] %}
-                {{ full_name }}<br>
-                {% endfor %}
-            </td>
-
-            {% if iface_zonelist_serial %}
-            <td>{{ zone["serial"] }}</td>
-            {% endif %}
-
-            {% if iface_zonelist_template %}
-            <td>{{ zone["template"] }}</td>
-            {% endif %}
-
-            {% if pdnssec_use %}
-            <td><i class="bi bi-{{ zone['secured'] ? 'lock-fill' : 'unlock-fill' }}"></i></td>
-            {% endif %}
-            <td>
-                <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit&id={{ zone['id'] }}" data-testid="edit-zone-{{ zone['id'] }}">
-                    <i class="bi bi-pencil-square"></i>
-                    {% trans %}Edit{% endtrans %}</a>
-                {% if perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner) %}
-                <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_domain&id={{ zone['id'] }}" data-testid="delete-zone-{{ zone['id'] }}">
-                    <i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}
-                </a>
-                {% endif %}
-            </td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    {% if letter_start != 'all' %}
-    <div class='pb-3'>
-        {{ pagination | raw }}
+        </div>
     </div>
-    {% endif %}
+    
+    <div class="card-body">
+        <div class="pb-3 text-secondary">{% trans %}Total number of zones:{% endtrans %} {{ count_zones_all_letterstart }} / {{ count_zones_view }}</div>
 
-    {% if perm_edit == "all" or perm_edit == "own" %}
-    {% if count_zones_view != 0 %}
-    <input type="submit" name="commit" value="{% trans %}Delete zone(s){% endtrans %}" class="btn btn-primary btn-sm">
-    {% endif %}
-    {% endif %}
+        {% if count_zones_view > iface_rowamount %}
+        <div class="mb-3">
+            {{ letters | raw}}
+        </div>
+        {% endif %}
 
-    {% if perm_zone_master_add %}
-    <input class="btn btn-secondary btn-sm" type="button" name="add_master"
-           onclick="location.href = 'index.php?page=add_zone_master'" value="{% trans %}Add master zone{% endtrans %}">
-    {% endif %}
-    {% if perm_zone_slave_add %}
-    <input class="btn btn-secondary btn-sm" type="button" name="add_slave"
-           onclick="location.href = 'index.php?page=add_zone_slave'" value="{% trans %}Add slave zone{% endtrans %}">
-    {% endif %}
-</form>
+        <form method="post" action="index.php?page=delete_domains">
+            <input type="hidden" name="_token" value="{{ csrf_token }}">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-sm mb-0">
+                    {% if count_zones_view > iface_rowamount and count_zones_all_letterstart == "0" or count_zones_view == 0 %}
+                    <tr><td>{% trans %}There are no zones to show in this listing.{% endtrans %}</td></tr>
+                    {% else %}
+                    <thead class="table-light">
+                    <tr>
+                        <th>
+                            <input type="checkbox" class="form-check-input" id="select_zones" onClick="toggleZoneCheckboxes()"/>
+                        </th>
+                        <th>
+                            <a href="index.php?page=list_zones&zone_sort_by=name&zone_sort_by_direction={{ zone_sort_by == 'name' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                                {% trans %}Name{% endtrans %}
+                            </a>
+                            {{ zone_sort_by == 'name' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
+                        </th>
+                        <th>
+                            <a href="index.php?page=list_zones&zone_sort_by=type&zone_sort_by_direction={{ zone_sort_by == 'type' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                                {% trans %}Type{% endtrans %}</a>
+                            {{ zone_sort_by == 'type' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
+                        </th>
+                        <th>
+                            <a href="index.php?page=list_zones&zone_sort_by=count_records&zone_sort_by_direction={{ zone_sort_by == 'count_records' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                                {% trans %}Records{% endtrans %}
+                            </a>
+                            {{ zone_sort_by == 'count_records' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
+                        </th>
+                        <th>
+                            <a href="index.php?page=list_zones&zone_sort_by=owner&zone_sort_by_direction={{ zone_sort_by == 'owner' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
+                                {% trans %}Owner{% endtrans %}
+                            </a>
+                            {{ zone_sort_by == 'owner' ? (zone_sort_direction == 'ASC' ? '<i class="bi bi-arrow-down"></i>' : '<i class="bi bi-arrow-up"></i>') : '' }}
+                        </th>
+                        <th>{% trans %}Full name{% endtrans %}</th>
+
+                        {% if iface_zonelist_serial %}
+                        <th>{% trans %}Serial{% endtrans %}</th>
+                        {% endif %}
+
+                        {% if iface_zonelist_template %}
+                        <th>{% trans %}Template{% endtrans %}</th>
+                        {% endif %}
+
+                        {% if pdnssec_use %}
+                        <th class="text-center">{% trans %}DNSSEC{% endtrans %}</th>
+                        {% endif %}
+                        <th class="text-end">{% trans %}Actions{% endtrans %}</th>
+                    </tr>
+                    </thead>
+                    {% endif %}
+
+                    <tbody>
+                    {% for zone in zones %}
+
+                    {% if session_userlogin in zone['users'] %}
+                    {% set user_is_zone_owner = true %}
+                    {% else %}
+                    {% set user_is_zone_owner = false %}
+                    {% endif %}
+
+                    <tr>
+                        <td>
+                            {% if count_zones_edit > 0 and (perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner)) %}
+                            <input class="form-check-input" type="checkbox" name="zone_id[]" value="{{ zone['id'] }}">
+                            {% endif %}
+                        </td>
+                        <td><span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ zone['comment'] }}">
+                            {{ zone["utf8_name"] }}
+                            </span></td>
+                        <td>{{ zone["type"] | lower }}</td>
+                        <td>{{ zone["count_records"] }}</td>
+
+                        <td>
+                            {% for owner in zone['owners'] %}
+                            {{ owner }}<br>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            {% for full_name in zone['full_names'] %}
+                            {{ full_name }}<br>
+                            {% endfor %}
+                        </td>
+
+                        {% if iface_zonelist_serial %}
+                        <td>{{ zone["serial"] }}</td>
+                        {% endif %}
+
+                        {% if iface_zonelist_template %}
+                        <td>{{ zone["template"] }}</td>
+                        {% endif %}
+
+                        {% if pdnssec_use %}
+                        <td class="text-center"><i class="bi bi-{{ zone['secured'] ? 'lock-fill text-success' : 'unlock-fill text-secondary' }}"></i></td>
+                        {% endif %}
+                        <td class="text-end">
+                            <div class="gap-2">
+                                <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit&id={{ zone['id'] }}" data-testid="edit-zone-{{ zone['id'] }}">
+                                    <i class="bi bi-pencil-square text-primary"></i>
+                                    <span class="d-none d-md-inline">{% trans %}Edit{% endtrans %}</span>
+                                </a>
+                                {% if perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner) %}
+                                <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_domain&id={{ zone['id'] }}" data-testid="delete-zone-{{ zone['id'] }}">
+                                    <i class="bi bi-trash text-danger"></i> 
+                                    <span class="d-none d-md-inline">{% trans %}Delete{% endtrans %}</span>
+                                </a>
+                                {% endif %}
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+            {% if letter_start != 'all' %}
+            <div class='py-3'>
+                {{ pagination | raw }}
+            </div>
+            {% endif %}
+
+            {% if perm_edit == "all" or perm_edit == "own" %}
+            {% if count_zones_view != 0 %}
+            <div class="card-footer py-3 mt-3">
+                <button type="submit" name="commit" class="btn btn-danger btn-sm">
+                    <i class="bi bi-trash me-1 text-white"></i>{% trans %}Delete zone(s){% endtrans %}
+                </button>
+            </div>
+            {% endif %}
+            {% endif %}
+        </form>
+    </div>
+</div>
