--- a/templates/default/migrations.html
+++ b/templates/default/migrations.html
@@ -5,8 +5,13 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Migrations{% endtrans %}</h5>
-
-<pre>
-    {{ output }}
-</pre>
+<div class="card shadow-sm mb-4">
+    <div class="card-header py-3 d-flex justify-content-between align-items-center">
+        <strong><i class="bi bi-database-gear me-2"></i>{% trans %}Migrations{% endtrans %}</strong>
+    </div>
+    <div class="card-body">
+        <div class="border p-3 rounded">
+            <pre class="mb-0 text-wrap code-output">{{ output }}</pre>
+        </div>
+    </div>
+</div>
