--- a/templates/default/delete_record.html
+++ b/templates/default/delete_record.html
@@ -18,16 +18,14 @@
         <strong><i class="bi bi-trash me-2 text-danger"></i>{% trans %}Delete Record{% endtrans %}</strong>
     </div>
     <div class="card-body">
-        <div class="alert alert-danger bg-danger bg-opacity-10">
-            <h5 class="alert-heading text-danger"><i class="bi bi-exclamation-triangle-fill me-2"></i>{% trans %}Warning{% endtrans %}</h5>
-            
+        <div class="alert alert-warning py-1 mb-2 small">
+            <i class="bi bi-exclamation-triangle-fill me-1"></i>
             {% if idn_zone_name %}
-            <p>{% trans %}You are about to delete a record in zone{% endtrans %} <strong>"{{ idn_zone_name }}" ({{ zone_name }})</strong></p>
+            {% trans %}You are about to delete a record in zone{% endtrans %} <strong>"{{ idn_zone_name }}" ({{ zone_name }})</strong>.
             {% else %}
-            <p>{% trans %}You are about to delete a record in zone{% endtrans %} <strong>"{{ zone_name }}"</strong></p>
+            {% trans %}You are about to delete a record in zone{% endtrans %} <strong>"{{ zone_name }}"</strong>.
             {% endif %}
-            
-            <p class="mb-0">{% trans %}This action cannot be undone. Are you sure you want to proceed?{% endtrans %}</p>
+            {% trans %}This action cannot be undone.{% endtrans %}
         </div>
         
         <div class="card mb-4">
