--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -122,6 +122,9 @@
                 <i class="bi bi-arrow-counterclockwise me-1 text-white"></i>{% trans %}Reset{% endtrans %}
             </button>
             {% endif %}
+            <a href="index.php?page=edit&id={{ zone_id }}&export_csv=1" class="btn btn-success btn-sm">
+                <i class="bi bi-file-earmark-spreadsheet me-1 text-white"></i>{% trans %}Export CSV{% endtrans %}
+            </a>
             {% if pdnssec_use %}
             {% if is_secured %}
             <a href="index.php?page=dnssec&id={{ zone_id }}" class="btn btn-secondary btn-sm">
